# Sakura_K

./: .cursorrules  .env  .env.dev  .env.dev.example  .env.docker  .env.docker.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile_uv  LICENSE  README.md  README2.md  alembic.ini  alembic.ini.example  alembic_example.ini  app.py  demo.py  docker-compose(copy).yml  docker-compose.yaml  docker-compose.yaml.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py  server_cp.py  training_log_20250620_164318.json
alembic/: README  README.md  env.py
alembic/versions_dev/: 0c6b6f89f810_0_0_1.py  4aa700c92755_0_0_3.py  578c1c0553c3_2_3_3.py  71521eeca6b2_3_6_4.py  746caa1a290b_2_3_2.py  a0f23157c661_3_6_4.py  b4dc6b7e0aef_3_6_4.py  c003d360d11a_2_3_2.py  dbf94b2ef7ca_3_6_4.py  ec96b99e59fd_0_0_2.py
application/: settings.py  urls.py
application/config/: __init__.py  development.py  development_example.py  production.py  production_example.py
apps/: __init__.py
config/: constant.py  database.py  db_base.py  enums.py  env.py  get_db.py  get_redis.py  get_scheduler.py  settings.py  wx_mini_config.py
core/: __init__.py  conf.py  crud.py  data_types.py  database.py  dependencies.py  docs.py  enum.py  event.py  exception.py  logger.py  middleware.py  mongo_manage.py  mysql_manage.py  path_conf.py  validator.py
core/mongo/: __init__.py  database_manage.py  mongo_manage.py
db/: __init__.py  db_base.py
db/redis/: db_redis.py
docker_env/Sakura_K/: Dockerfile
docker_env/mongo/: init-mongo.js
docker_env/nginx/: nginx.conf  nginx.conf.example  nginx_copy.conf
docker_env/sakura_k/: Dockerfile
docker_env/sakura_task/: Dockerfile
exceptions/: exception.py  handle.py
mcp_server/: README.md  ai_websocket.py  mcp_client.py  mcp_server.py  mcp_text2sql.py  streamable_http_advanced_demo.py  streamable_http_demo.py  streamable_http_websocket.py  text2sql2_server.py  tool_weather.py
mcp_server/text2sql/: app.py  bms.sql  custom_chat.py  rewrite_ask.py  siliconflow_api.py  vanna_text2sql.py
mcp_server/text2sql2/: README.md  app.py  text2sql.py  train.py  training_log_20250620_102208.json
middlewares/: auto_import_routes.py  cors_middleware.py  gzip_middleware.py  handle.py
middlewares/trace_middleware/: __init__.py  ctx.py  (+2 more)
module_task/: __init__.py  scheduler_getLatestReport.py  scheduler_getLatestReportScript.py  scheduler_log.py  scheduler_test.py
module_website/: utils.py
plugin/: __init__.py  tools.py
router/: __init__.py  router_manager.py  router_manager_old.py
scripts/: __init__.py
sql/: backup_mysql.sh  skf-pg.sql  skf.sql
sub_applications/: handle.py  staticfiles.py
test/: __init__.py  test_demo.py
utils/: ApiTestLogin_util.py  __init__.py  aes_crypto.py  aliyun_sms.py  bot_util.py  cache.py  common_util.py  count.py  cron_util.py  db_getter.py  docs.py  excel_util.py  gen_util.py  hooks.py  http_util.py  import_parse.py  ip_manage.py  log_util.py  message_util.py  mysql_util.py  page_util.py  pwd_util.py  redis_info.py  response.py  response_util.py  send_email.py  server_info.py  socket_client.py  ssh_operation.py  status.py  string_util.py  template_util.py  time_format_util.py  timezone.py  tools.py  upload_util.py
(+431 files in other folders)
