[tool.poetry]
name = "Sakura_K"
version = "0.1.0"
description = ""
authors = ["ranyong <ranyong1209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "3.11.0"
asyncmy = "0.2.9"
datetime = "5.5"
loguru = "0.7.3"
openpyxl = "3.1.5"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
psutil = "7.0.0"
pydantic-validation-decorator = "0.1.4"
pyjwt = {version = "2.10.0", extras = ["crypto"]}
pymysql = "1.1.1"
redis = "5.2.1"
requests = "2.32.3"
sqlalchemy = {version = "2.0.38", extras = ["asyncio"]}
aiomysql = "^0.2.0"
aiohttp = ">=3.9.1,<3.10.0"
faker = ">=30.3.0,<30.4.0"
cryptography = "43.0.3"
starlette = "0.40.0"
python-dotenv = "1.0.1"
rich = "13.9.3"
psycopg2-binary = "2.9.9"
pillow = "11.1.0"
pandas = "2.2.3"
user-agents = "2.2.0"
fastapi = {version = "0.115.8", extras = ["all"]}
atomic-bomb-engine = "^0.41.3"
alembic = "1.13.1"
drissionpage = "^4.1.0.14"
oss2 = "2.18.4"
beautifulsoup4 = "4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
