[project]
name = "Sakura_K"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp~=3.9.1",
    "aiomysql~=0.2.0",
    "alembic==1.13.1",
    "apscheduler==3.11.0",
    "asyncmy>=0.2.10",
    "beautifulsoup4==4.12.3",
    "chromadb>=0.6.3",
    "cryptography==43.0.3",
    "datetime==5.5",
    "faker~=30.3.0",
    "fastapi[all]==0.115.8",
    "loguru==0.7.3",
    "mcp==1.8.1",
    "mysql-connector-python==9.3.0",
    "openai==1.72.0",
    "openpyxl==3.1.5",
    "oss2==2.18.4",
    "pandas==2.2.3",
    "paramiko==3.5.1",
    "passlib[bcrypt]==1.7.4",
    "pillow==11.1.0",
    "plotly>=6.1.0",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.9",
    "pydantic-validation-decorator==0.1.4",
    "pyjwt[crypto]==2.10.1",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "rich==13.9.3",
    "sqlalchemy[asyncio]==2.0.38",
    "sqlglot==26.6.0",
    "starlette==0.40.0",
    "user-agents==2.2.0",
]
